--- a/style.css
+++ b/style.css
@@ -4,18 +4,67 @@
 }
 
 body {
-    margin: 0px;
-    font-family: Arial, sans-serif;
+    /* margin: 0px; */
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: black;
+    color: white;
+}
+
+header {
+    font-family: 'Roboto Mono', monospace;
+    background-color: black;
+    text-align: center;
 }
 header, section {
     padding: 20px;
 }
-p, li {
-    line-height: 1.5em;
-}
 
-#inspiration {
-    background-color: #F0F0F0;
-    padding-top: 40px;
-    padding-bottom: 40px;
+
+footer {
+    background-color: whitesmoke;
+    color: black;
+    height: 25%;
+    width: 100%;
+    bottom: 0;
+    position: fixed;
+    left: 0;
+    padding-left: 10px;
 }
+a:link, a:visited {
+    color:white;
+    text-decoration: none;
+  }
+a:hover{
+    font-weight: bolder;
+
+}
+.footer:link, .footer:visited{
+    color: white;
+}
+ p {
+     font-weight: bold;
+
+ }
+ ul {
+    padding: 0;
+    width: 100%;
+  }
+  li {
+    display: inline;
+  }
+a.footer {
+    outline: none;
+    text-decoration: none;
+    display: inline;
+    width: 19.5%;
+    margin-right: 0.625%;
+    /* text-align: center; */
+    line-height: 3;
+    color: black;
+    background:black;
+    padding: 10px;
+}
+#homework {
+    padding-bottom: 5px;
+}
+  
