--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: black;
     color: white;
+    /* overflow: scroll; */
 }
 
 header {
@@ -16,7 +17,7 @@ header {
     text-align: center;
 }
 header, section {
-    padding: 20px;
+    padding: 8px;
 }
 
 
